# LrnWgpu

./: Cargo.toml  README.md  build.rs
res/: cube.mtl  happy-cube.mtl
src/: main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
