[package]
name = "LrnWgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.12.0"
winit = "0.27.0"
image = "0.23.14"
cgmath = "0.18.0"
env_logger = "0.9.0"
log = "0.4.14"
pollster = "0.2.5"
bytemuck = { version = "1.20.0", features = [ "derive" ] }
anyhow = "1.0"
tobj = { version = "3.0", features = ["async"] }
cfg-if = "1.0.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"